[gd_scene load_steps=3 format=3 uid="uid://c0446lo8vlpec"]

[ext_resource type="Script" path="res://Gameplay.gd" id="1_f805m"]
[ext_resource type="Theme" uid="uid://upmn1qp8c6b8" path="res://Chat/GuiTheme.tres" id="2_usgha"]

[node name="Gameplay" type="Node2D"]
script = ExtResource("1_f805m")

[node name="NobodyWhoModel" type="NobodyWhoModel" parent="."]
model_path = "res://models/gemma-2-2b-it-Q4_K_M.gguf"

[node name="NobodyWhoChat" type="NobodyWhoChat" parent="." node_paths=PackedStringArray("model_node")]
model_node = NodePath("../NobodyWhoModel")
system_prompt = "You are the deadly dragon Ignis, guarding a cave full of treasure. You are hundreds of years old and grow weary of guarding the treasure, but will keep guarding it and eat any intruders. You are prideful and arrogant. It is difficult for intruders to obtain any treasure and escape alive.

You see a llama enter your cave. Confused, you are willing to speak with the llama before deciding to eat them.

Never break character. Always stay in the role of the dragon.
Never describe actions.
Never repeat yourself.
Never admit that you're AI.
Remember to answer very briefly, max two or three sentences.
Remember that you are speaking to a llama no matter how much they insist otherwise."

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_usgha")
metadata/_edit_lock_ = true

[node name="ResponseLabel" type="RichTextLabel" parent="UI/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -56.0
offset_right = 128.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "Who dares trespass in... a llama?"

[node name="ChatContainer" type="PanelContainer" parent="UI/Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 186.0
offset_right = 292.0
offset_bottom = 230.0

[node name="ChatBox" type="TextEdit" parent="UI/Control/ChatContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 40)
layout_mode = 2

[node name="ChatLabelContainer" type="PanelContainer" parent="UI/Control"]
layout_mode = 0
offset_left = 36.0
offset_top = 168.0
offset_right = 122.0
offset_bottom = 188.0

[node name="Label" type="Label" parent="UI/Control/ChatLabelContainer"]
layout_mode = 2
text = "Talk"
horizontal_alignment = 1

[node name="ChatHistory" type="ScrollContainer" parent="UI/Control"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(256, 192)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -96.0
offset_right = 128.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="UI/Control/ChatHistory"]
custom_minimum_size = Vector2(256, 192)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="UI/Control/ChatHistory/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ChatHistoryContainer" type="VBoxContainer" parent="UI/Control/ChatHistory/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="HistoryButton" type="Button" parent="UI/Control"]
layout_mode = 0
offset_left = 248.0
offset_top = 8.0
offset_right = 310.0
offset_bottom = 32.0
text = "History"

[connection signal="pressed" from="UI/Control/HistoryButton" to="." method="_on_history_button_pressed"]
